--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       <h1 class="main-title">Оформление свадеб</h1>
       <div class="descr-title">г.Новокузнецк, г.Междуреченск</div>
       <div class="cost-text">
-        Заполните анкету и узнайте стоимость оформления Вашей свадьбы
+        Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
       </div>
-      <button>Узнать стоимость</button>
+      <button class="btn">Узнать стоимость</button>
     </div>
 
     <div class="intro__right">
@@ -63,7 +63,7 @@
           <img src="img/slide/slide1.jpg" alt="" class="slider__pic">
         </div>
         <div class="slider__item">
-          <img src="img/slide/slide2.jpg" alt="" class="slider__pic">
+          <img src="img/slide/slide2.jpg" alt="" class="slider__pic slider__pic_height">
         </div>
         <div class="slider__item">
           <img src="img/slide/slide3.jpg" alt="" class="slider__pic">
