--- a/index.html
+++ b/index.html
@@ -48,37 +48,229 @@
   <section class="intro">
     <div class="container box-flex">
 
-    <div class="intro__left">
-      <h1 class="main-title">Оформление свадеб</h1>
-      <div class="descr-title">г.Новокузнецк, г.Междуреченск</div>
-      <div class="cost-text">
-        Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
+      <div class="intro__left">
+        <h1 class="main-title">Оформление свадеб</h1>
+        <div class="descr-title">г.Новокузнецк, г.Междуреченск</div>
+        <div class="cost-text">
+          Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
+        </div>
+        <button class="btn">Узнать стоимость</button>
       </div>
-      <button class="btn">Узнать стоимость</button>
-    </div>
 
-    <div class="intro__right">
-      <div id="slider">
-        <div class="slider__item">
-          <img src="img/slide/slide1.jpg" alt="" class="slider__pic">
-        </div>
-        <div class="slider__item">
-          <img src="img/slide/slide2.jpg" alt="" class="slider__pic slider__pic_height">
-        </div>
-        <div class="slider__item">
-          <img src="img/slide/slide3.jpg" alt="" class="slider__pic">
-        </div>
-        <div class="slider__item">
-          <img src="img/slide/slide4.jpg" alt="" class="slider__pic">
-        </div>
-        <div class="slider__item">
-          <img src="img/slide/slide5.jpg" alt="" class="slider__pic">
+      <div class="intro__right">
+        <div id="slider">
+          <div class="slider__item">
+            <img src="img/slide/slide1.jpg" alt="" class="slider__pic">
+          </div>
+          <div class="slider__item">
+            <img src="img/slide/slide2.jpg" alt="" class="slider__pic slider__pic_height">
+          </div>
+          <div class="slider__item">
+            <img src="img/slide/slide3.jpg" alt="" class="slider__pic">
+          </div>
+          <div class="slider__item">
+            <img src="img/slide/slide4.jpg" alt="" class="slider__pic">
+          </div>
+          <div class="slider__item">
+            <img src="img/slide/slide5.jpg" alt="" class="slider__pic">
+          </div>
         </div>
       </div>
-    </div>
 
     </div>
   </section>
+
+  <section class="advantages">
+    <div class="container">
+
+      <ul class="advantages__list">
+        <li class="advantages__item">Слаженная работа команды профессионалов</li>
+        <li class="advantages__item">Качественное оформление</li>
+        <li class="advantages__item">Большой выбор декора</li>
+      </ul>
+
+    </div>
+  </section>
+
+  <section class="about">
+    <div class="container">
+      <h3 class="section__title">О студии</h3>
+      <p class="about__descr">
+        ORIGAMI - профессиональная студия оформления свадеб. Мы знаем, как с помощью декора подчеркнуть красоту Ваших
+        чувств.
+        Неважно, будет ли это уютный свадебный ужин в кругу самых близких или пышное торжество. Главное, что это будет
+        Ваша
+        свадьба, душевная, стильная и неповторимая
+      </p>
+    </div>
+  </section>
+
+  <section class="services">
+    <div class="container">
+
+      <h3 class="section__title">Услуги</h3>
+
+      <ul class="services__list">
+        <li class="services__item">
+          <div class="services__title">Зона молодых</div>
+          <div class="services__descr">Сделаем акцент на места молодоженов, но не затмим Вашу пару декором</div>
+        </li>
+        <li class="services__item">
+          <div class="services__title">Гостевой зона</div>
+          <div class="services__descr">Украшение столов гостей цветочными композициями, оформление гостевых стульев
+          </div>
+        </li>
+        <li class="services__item">
+          <div class="services__title">Выездная регистрация</div>
+          <div class="services__descr">Оформление арки и места для гостей</div>
+        </li>
+        <li class="services__item">
+          <div class="services__title">Фотозона</div>
+          <div class="services__descr">Фотозона важна не только молодоженам, это еще и любимое развлечение гостей</div>
+        </li>
+        <li class="services__item">
+          <div class="services__title">Полиграфия</div>
+          <div class="services__descr">Пригласительные, план рассадки, карточки гостей за столами, меню ― на вашей
+            свадьбе мы учтем все детали</div>
+        </li>
+        <li class="services__item">
+          <div class="services__title">Атрибутика</div>
+          <div class="services__descr">Бутылка и бокалы шампанского, подушечка для колец и другие важные мелочи</div>
+        </li>
+      </ul>
+
+    </div>
+  </section>
+
+  <section class="portfolio">
+    <div class="container">
+
+      <h3 class="section__title">Портфолио</h3>
+
+      <ul class="portfolio__list">
+        <li class="portfolio__item">
+          <a href="#" class="portfolio__link">
+            <div class="portfolio__pic" style="background-image: url(./img/portfolio/1/1_1.jpg);"></div>
+            <div class="portfolio__name">Роман и Светлана</div>
+          </a>
+        </li>
+        <li class="portfolio__item">
+          <a href="#" class="portfolio__link">
+            <div class="portfolio__pic" style="background-image: url(./img/portfolio/2/2_1.jpg);"></div>
+            <div class="portfolio__name">Вадим и Елена</div>
+          </a>
+        </li>
+        <li class="portfolio__item">
+          <a href="#" class="portfolio__link">
+            <div class="portfolio__pic" style="background-image: url(./img/portfolio/3/3_1.jpg);"></div>
+            <div class="portfolio__name">Закир и Вероника</div>
+          </a>
+        </li>
+        <li class="portfolio__item">
+          <a href="#" class="portfolio__link">
+            <div class="portfolio__pic" style="background-image: url(./img/portfolio/4/4_1.jpg);"></div>
+            <div class="portfolio__name">Вячеслав и Мария</div>
+          </a>
+        </li>
+      </ul>
+
+      <div class="view-button">
+        <button class="btn">Показать еще</button>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="packages">
+    <div class="container">
+      <h3 class="section__title">Свадебные пакеты</h3>
+
+      <ul class="packages__list">
+
+        <li class="packages__item">
+          <div class="packages__content">
+            <div class="packages__plan">Small</div>
+            <div class="packages__price">7000 &#8381</div>
+            <ul class="packages__plan-list">
+              <li class="packages__plan-item">Фон за столом молодых</li>
+              <li class="packages__plan-item">Драпировка стола молодых</li>
+              <li class="packages__plan-item">Элементы декора</li>
+              <li class="packages__plan-item">Декоративные цветы на стол молодых</li>
+            </ul>
+          </div>
+          <div class="packages__mark">* Из имеющегося декора в наличии</div>
+          <div class="packages__button">
+            <button class="btn">Оставить заявку</button>
+          </div>
+        </li>
+
+        <li class="packages__item">
+          <div class="packages__content">
+            <div class="packages__plan">Medium</div>
+            <div class="packages__price">12000 &#8381</div>
+            <ul class="packages__plan-list">
+              <li class="packages__plan-item">Фон за столом молодых</li>
+              <li class="packages__plan-item">Драпировка стола молодых</li>
+              <li class="packages__plan-item">Элементы декора</li>
+              <li class="packages__plan-item">Декоративные цветы на стол молодых</li>
+              <li class="packages__plan-item">Стулья чехол + бант (до 50шт)</li>
+              <li class="packages__plan-item">Композиция на столы гостей</li>
+            </ul>
+          </div>
+          <div class="packages__mark">* Из имеющегося декора в наличии</div>
+          <div class="packages__button">
+            <button class="btn">Оставить заявку</button>
+          </div>
+        </li>
+
+        <li class="packages__item">
+          <div class="packages__content">
+            <div class="packages__plan">Large</div>
+            <div class="packages__price">17000 &#8381</div>
+            <ul class="packages__plan-list">
+              <li class="packages__plan-item">Фон за столом молодых</li>
+              <li class="packages__plan-item">Драпировка стола молодых</li>
+              <li class="packages__plan-item">Элементы декора</li>
+              <li class="packages__plan-item">Декоративные цветы на стол молодых</li>
+              <li class="packages__plan-item">Выездная регистрация</li>
+            </ul>
+          </div>
+          <div class="packages__mark">* Из имеющегося декора в наличии</div>
+          <div class="packages__button">
+            <button class="btn">Оставить заявку</button>
+          </div>
+        </li>
+
+        <li class="packages__item">
+          <div class="packages__content">
+            <div class="packages__plan">conceptual</div>
+            <div class="packages__price">30000 &#8381</div>
+            <ul class="packages__plan-list">
+              <li class="packages__plan-item">Разработка концепции</li>
+              <li class="packages__plan-item">Составление эскиза</li>
+              <li class="packages__plan-item">Индивидуальное изготовление конструкции</li>
+            </ul>
+          </div>
+          <div class="packages__mark">* Стоимость зависит от объема работы, выбранных цветов и материалов, сложности
+            монтажных работ и другое</div>
+          <div class="packages__button">
+            <button class="btn">Оставить заявку</button>
+          </div>
+        </li>
+
+      </ul>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="container">
+      <h3 class="section__title">Отзывы</h3>
+
+
+      
+    </div>
+  </section>
+
 
 
   <script src="./build/js/scripts.min.js"></script>
