--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="./build/js/scripts.min.js"></script>
   <link rel="stylesheet" href="build/css/main.css">
   <title>Origami</title>
 </head>
@@ -266,14 +268,50 @@
     <div class="container">
       <h3 class="section__title">Отзывы</h3>
 
+      <div id="reviews__wrap">
 
-      
+        <div class="reviews__item">
+          <div class="reviews__pic">
+            <img src="img/slide/slide1.jpg" alt="">
+          </div>
+          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой! Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего дела! Ещё раз спасибо)</div>
+          <div class="reviews__link">
+            Наташа Горобец, https://vk.com/id24914335
+          </div>
+        </div>
+
+        <div class="reviews__item">
+          <div class="reviews__pic">
+            <img src="img/slide/slide1.jpg" alt="">
+          </div>
+          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой!
+            Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего
+            дела! Ещё раз спасибо)</div>
+          <div class="reviews__link">
+            Наташа Горобец, https://vk.com/id24914335
+          </div>
+        </div>
+
+        <div class="reviews__item">
+          <div class="reviews__pic">
+            <img src="img/slide/slide1.jpg" alt="">
+          </div>
+          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой!
+            Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего
+            дела! Ещё раз спасибо)</div>
+          <div class="reviews__link">
+            Наташа Горобец, https://vk.com/id24914335
+          </div>
+        </div>
+
+      </div>
+
+
     </div>
   </section>
 
 
-
-  <script src="./build/js/scripts.min.js"></script>
+ 
 </body>
 
 </html>
