--- a/index.html
+++ b/index.html
@@ -266,42 +266,50 @@
     <div class="container">
       <h3 class="section__title">Отзывы</h3>
 
-      <div id="reviews__wrap">
+      <div class="wrapper">
+        <div id="reviews__wrap">
 
-        <div class="reviews__item">
-          <div class="reviews__pic">
-            <img src="img/slide/slide1.jpg" alt="">
+          <div class="reviews__item">
+            <div class="reviews__pic">
+              <img src="img/slide/slide1.jpg" alt="">
+            </div>
+            <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
+              настоящей сказкой! Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам!
+              Вы - настоящие мастера своего дела! Ещё раз спасибо)</div>
+            <div class="reviews__link">
+              Наташа Горобец, https://vk.com/id24914335
+            </div>
           </div>
-          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой! Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего дела! Ещё раз спасибо)</div>
-          <div class="reviews__link">
-            Наташа Горобец, https://vk.com/id24914335
+
+          <div class="reviews__item">
+            <div class="reviews__pic">
+              <img src="img/slide/slide1.jpg" alt="">
+            </div>
+            <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
+              настоящей сказкой!
+              Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие
+              мастера своего
+              дела! Ещё раз спасибо)</div>
+            <div class="reviews__link">
+              Наташа Горобец, https://vk.com/id24914335
+            </div>
           </div>
+
+          <div class="reviews__item">
+            <div class="reviews__pic">
+              <img src="img/slide/slide1.jpg" alt="">
+            </div>
+            <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
+              настоящей сказкой!
+              Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие
+              мастера своего
+              дела! Ещё раз спасибо)</div>
+            <div class="reviews__link">
+              Наташа Горобец, https://vk.com/id24914335
+            </div>
+          </div>
+
         </div>
-
-        <div class="reviews__item">
-          <div class="reviews__pic">
-            <img src="img/slide/slide1.jpg" alt="">
-          </div>
-          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой!
-            Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего
-            дела! Ещё раз спасибо)</div>
-          <div class="reviews__link">
-            Наташа Горобец, https://vk.com/id24914335
-          </div>
-        </div>
-
-        <div class="reviews__item">
-          <div class="reviews__pic">
-            <img src="img/slide/slide1.jpg" alt="">
-          </div>
-          <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день настоящей сказкой!
-            Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие мастера своего
-            дела! Ещё раз спасибо)</div>
-          <div class="reviews__link">
-            Наташа Горобец, https://vk.com/id24914335
-          </div>
-        </div>
-
       </div>
 
 
