--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   </section>
 
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./build/js/scripts.min.js"></script>
 </body>
 
