--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
             </div>
           </div>
 
+          <div class="reviews__item">
+            <div class="reviews__pic">
+              <img src="img/slide/slide1.jpg" alt="">
+            </div>
+            <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
+              настоящей сказкой!
+              Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам! Вы - настоящие
+              мастера своего
+              дела! Ещё раз спасибо)</div>
+            <div class="reviews__link">
+              Наташа Горобец, https://vk.com/id24914335
+            </div>
+          </div>
+
         </div>
       </div>
 
@@ -316,8 +330,47 @@
     </div>
   </section>
 
+  <section class="contacts">
+    <div class="contacts__left">
+      <div class="contacts__bg" style="background-image: url(../img/bg2.png)"></div>
+    </div>
+    <div class="contacts__right">
 
- <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <div class="contacts__title">Контакты</div>
+      <ul class="contacts__list">
+        <li class="contacts__item">
+          <div class="contacts__place">г.Новокузнецк, г.Междуреченск</div>
+        </li>
+        <li class="contacts__item">
+          <a href="#" class="contacts__phone">+7 906 925 16 57</a>
+        </li>
+        <li class="contacts__item">
+          <a href="#" class="contacts__mail">Katrin_898@mail.ru</a>
+        </li>
+      </ul>
+
+      <div class="contacts__soctitle">Социальные сети</div>
+      <ul class="soc__list">
+        <li class="soc__item">
+          <a href="#" class="soc__link">
+            <img src="img/inst.svg" alt="">
+          </a>
+        </li>
+        <li class="soc__item">
+          <a href="#" class="soc__link">
+            <img src="img/vk.svg" alt="">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer_text">ORIGAMI 2019</div>
+  </footer>
+
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./build/js/scripts.min.js"></script>
 </body>
 
