--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
   <section class="contacts">
     <div class="contacts__left">
-      <div class="contacts__bg" style="background-image: url(../../img/bg2.png)"></div>
+      <div class="contacts__bg" style="background-image: url(./img/bg2.png)"></div>
     </div>
     <div class="contacts__right">
 
