--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="cost-text">
           Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
         </div>
-        <button class="btn call">Узнать стоимость</button>
+        <button class="btn">Узнать стоимость</button>
       </div>
 
       <div class="intro__right">
