--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -148,38 +148,95 @@
       <h3 class="section__title">Портфолио</h3>
 
       <ul class="portfolio__list">
+
         <li class="portfolio__item">
-          <a href="#" class="portfolio__link">
-            <div class="portfolio__wrap-pic">
-              <div class="portfolio__pic" style="background-image: url(./img/portfolio/1/1_1.jpg);"></div>
-            </div>
-            <div class="portfolio__name">Роман и Светлана</div>
-          </a>
+          <div class="portfolio__wrap-pic gallery">
+            <a href="img/portfolio/1/1.jpg">
+              <img src="img/portfolio/1/1_1.jpg" alt="" class="popup-img__pic portfolio__pic">
+            </a>
+            <a href="img/portfolio/1/1-2.jpg">
+              <img src="img/portfolio/1/1.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/1/1-3.jpg">
+              <img src="img/portfolio/1/1-3.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/1/1-4.jpg">
+              <img src="img/portfolio/1/1-4.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+          </div>
+          <div class="portfolio__name">Роман и Светлана</div>
         </li>
+
         <li class="portfolio__item">
-          <a href="#" class="portfolio__link">
-            <div class="portfolio__wrap-pic">
-              <div class="portfolio__pic" style="background-image: url(./img/portfolio/2/2_1.jpg);"></div>
-            </div>
-            <div class="portfolio__name">Вадим и Елена</div>
-          </a>
+          <div class="portfolio__wrap-pic gallery">
+            <a href="img/portfolio/2/2-1.jpg">
+              <img src="img/portfolio/2/2_1.jpg" alt="" class="popup-img__pic portfolio__pic">
+            </a>
+            <a href="img/portfolio/2/2-2.jpg">
+              <img src="img/portfolio/2/2-2.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/2/2-3.jpg">
+              <img src="img/portfolio/2/2-3.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/2/2-4.jpg">
+              <img src="img/portfolio/2/2-4.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/2/2-5.jpg">
+              <img src="img/portfolio/2/2-5.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/2/2-6.jpg">
+              <img src="img/portfolio/2/2-6.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+
+          </div>
+          <div class="portfolio__name">Вадим и Елена</div>
         </li>
+
         <li class="portfolio__item">
-          <a href="#" class="portfolio__link">
-            <div class="portfolio__wrap-pic">
-              <div class="portfolio__pic" style="background-image: url(./img/portfolio/3/3_1.jpg);"></div>
-            </div>
-            <div class="portfolio__name">Закир и Вероника</div>
-          </a>
+          <div class="portfolio__wrap-pic gallery">
+            <a href="img/portfolio/3/3-1.jpg">
+              <img src="img/portfolio/3/3_1.jpg" alt="" class="popup-img__pic portfolio__pic">
+            </a>
+            <a href="img/portfolio/3/3-2.jpg">
+              <img src="img/portfolio/3/3-2.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/3/3-3.jpg">
+              <img src="img/portfolio/3/3-3.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+          </div>
+          <div class="portfolio__name">Закир и Вероника</div>
         </li>
+
         <li class="portfolio__item">
-          <a href="#" class="portfolio__link">
-            <div class="portfolio__wrap-pic">
-              <div class="portfolio__pic" style="background-image: url(./img/portfolio/4/4_1.jpg);"></div>
-            </div>
+          <div class="portfolio__wrap-pic gallery">
+            <a href="img/portfolio/4/4-1.jpg">
+              <img src="img/portfolio/4/4_1.jpg" alt="" class="popup-img__pic portfolio__pic">
+            </a>
+            <a href="img/portfolio/4/4-2.jpg">
+              <img src="img/portfolio/4/4-2.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-3.jpg">
+              <img src="img/portfolio/4/4-3.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-4.jpg">
+              <img src="img/portfolio/4/4-4.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-5.jpg">
+              <img src="img/portfolio/4/4-5.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-6.jpg">
+              <img src="img/portfolio/4/4-6.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-7.jpg">
+              <img src="img/portfolio/4/4-7.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+            <a href="img/portfolio/4/4-8.jpg">
+              <img src="img/portfolio/4/4-8.jpg" alt="" class="popup-img__pic mfp-hide">
+            </a>
+          </div>
             <div class="portfolio__name">Вячеслав и Мария</div>
-          </a>
         </li>
+
       </ul>
 
       <div class="view-button">
@@ -285,7 +342,8 @@
               настоящей сказкой! Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам!
               Вы - настоящие мастера своего дела! Ещё раз спасибо)</div>
             <div class="reviews__link">
-              <a class="preson__link" href="https://vk.com/id24914335" target="_blank">Наташа Горобец, <span class="preson__link-soc">vk.com/id24914335</span></a>
+              <a class="preson__link" href="https://vk.com/id24914335" target="_blank">Наташа Горобец, <span
+                  class="preson__link-soc">vk.com/id24914335</span></a>
             </div>
           </div>
 
@@ -385,7 +443,8 @@
         <input type="number" placeholder="Телефон">
         <button type="submit" class="btn">Оставить заявку</button>
       </form>
-      <div class="politic">*Нажимая на кнопку, Вы соглашаетесь на обработку своих персональных данных и соглашаетесь с <a href="" class="politic__link">политикой конфиденциальности</a></div>
+      <div class="politic">*Нажимая на кнопку, Вы соглашаетесь на обработку своих персональных данных и соглашаетесь с
+        <a href="" class="politic__link">политикой конфиденциальности</a></div>
     </div>
   </div>
   <div id="black_fill"></div>
@@ -393,6 +452,7 @@
   <footer class="footer">
     <div class="footer_text">ORIGAMI 2019</div>
   </footer>
+
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
