--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
         </ul>
       </nav>
 
+      <div class="soc__list-mob">
+        
+          <a href="#" class="soc__link-mob">
+            <img src="img/inst.svg" alt="">
+          </a>
+          <a href="#" class="soc__link-mob">
+            <img src="img/vk.svg" alt="">
+          </a>
+        
+      </div>
+
+
+      <a href="#" class="burger">
+        <img src="img/menu.svg" alt="">
+      </a>
+      <a href="#" class="closeMark">
+        <img src="img/x.svg" alt="">
+      </a>
+
       <a href="#" class="phone">
         +7 906 925 16 57
       </a>
@@ -234,7 +253,7 @@
               <img src="img/portfolio/4/4-8.jpg" alt="" class="popup-img__pic mfp-hide">
             </a>
           </div>
-            <div class="portfolio__name">Вячеслав и Мария</div>
+          <div class="portfolio__name">Вячеслав и Мария</div>
         </li>
 
       </ul>
