--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       </nav>
 
       <div class="soc__list-mob">
-        
-          <a href="#" class="soc__link-mob">
-            <img src="img/inst.svg" alt="">
-          </a>
-          <a href="#" class="soc__link-mob">
-            <img src="img/vk.svg" alt="">
-          </a>
-        
+
+        <a href="#" class="soc__link-mob">
+          <img src="img/inst.svg" alt="">
+        </a>
+        <a href="#" class="soc__link-mob">
+          <img src="img/vk.svg" alt="">
+        </a>
+
       </div>
 
 
@@ -73,7 +73,7 @@
         <div class="cost-text">
           Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
         </div>
-        <button class="btn">Узнать стоимость</button>
+        <button class="btn calc-call">Узнать стоимость</button>
       </div>
 
       <div class="intro__right">
@@ -463,16 +463,176 @@
         <button type="submit" class="btn">Оставить заявку</button>
       </form>
       <div class="politic">*Нажимая на кнопку, Вы соглашаетесь на обработку своих персональных данных и соглашаетесь с
-        <a href="" class="politic__link">политикой конфиденциальности</a></div>
+        <span class="politic__link">политикой конфиденциальности</span></div>
     </div>
   </div>
   <div id="black_fill"></div>
+
+  <div class="politic__page">
+    <button class="close-button">
+      <img src="img/x-black.svg" alt="">
+    </button>
+    <p>Политика в отношении обработки персональных данных</p>
+    <ol class="politic__list">
+      <li class="politic__item">Общие положения
+        Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от
+        27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по
+        обеспечению
+        безопасности персональных данных <span class="highlighted">Михайлова Ивана Сергеевича</span> (далее – Оператор).
+        Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод
+        человека и
+        гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни,
+        личную и
+        семейную тайну.
+        Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей
+        информации, которую Оператор может получить о посетителях веб-сайта <a href="https://mysite.ru"
+          class="highlighted">https://mysite.ru</a></li>
+
+      <li class="politic__item">Основные понятия, используемые в Политике
+        Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств
+        вычислительной
+        техники;
+        Блокирование персональных данных – временное прекращение обработки персональных данных (за исключением случаев,
+        если
+        обработка необходима для уточнения персональных данных);
+        Веб-сайт – совокупность графических и информационных материалов, а также программ для ЭВМ и баз данных,
+        обеспечивающих
+        их доступность в сети интернет по сетевому адресу https://mysite.ru;
+        Информационная система персональных данных — совокупность содержащихся в базах данных персональных данных, и
+        обеспечивающих их обработку информационных технологий и технических средств;
+        Обезличивание персональных данных — действия, в результате которых невозможно определить без использования
+        дополнительной информации принадлежность персональных данных конкретному Пользователю или иному субъекту
+        персональных
+        данных;
+        Обработка персональных данных – любое действие (операция) или совокупность действий (операций), совершаемых с
+        использованием средств автоматизации или без использования таких средств с персональными данными, включая сбор,
+        запись,
+        систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу
+        (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение персональных
+        данных;
+        Оператор – государственный орган, муниципальный орган, юридическое или физическое лицо, самостоятельно или
+        совместно с
+        другими лицами организующие и (или) осуществляющие обработку персональных данных, а также определяющие цели
+        обработки
+        персональных данных, состав персональных данных, подлежащих обработке, действия (операции), совершаемые с
+        персональными
+        данными;
+        Персональные данные – любая информация, относящаяся прямо или косвенно к определенному или определяемому
+        Пользователю
+        веб-сайта <a href="#" class="highlighted">https://mysite.ru;</a>
+        Пользователь – любой посетитель веб-сайта <a href="#" class="highlighted">https://mysite.ru;</a>
+        Предоставление персональных данных – действия, направленные на раскрытие персональных данных определенному лицу
+        или
+        определенному кругу лиц;
+        Распространение персональных данных – любые действия, направленные на раскрытие персональных данных
+        неопределенному
+        кругу лиц (передача персональных данных) или на ознакомление с персональными данными неограниченного круга лиц,
+        в том
+        числе обнародование персональных данных в средствах массовой информации, размещение в
+        информационно-телекоммуникационных
+        сетях или предоставление доступа к персональным данным каким-либо иным способом;
+        Трансграничная передача персональных данных – передача персональных данных на территорию иностранного
+        государства органу
+        власти иностранного государства, иностранному физическому или иностранному юридическому лицу;
+        Уничтожение персональных данных – любые действия, в результате которых персональные данные уничтожаются
+        безвозвратно с
+        невозможностью дальнейшего восстановления содержания персональных данных в информационной системе персональных
+        данных и
+        (или) результате которых уничтожаются материальные носители персональных данных.</li>
+
+      <li class="politic__item">Оператор может обрабатывать следующие персональные данные Пользователя
+        Фамилия, имя, отчество;
+        Номер телефона;
+        Адрес электронной почты;
+        Также на сайте происходит сбор и обработка обезличенных данных о посетителях (в т.ч. файлов «cookie») с помощью
+        сервисов
+        интернет-статистики (Яндекс Метрика и Гугл Аналитика и других).
+        Вышеперечисленные данные далее по тексту Политики объединены общим понятием Персональные данные.</li>
+
+      <li class="politic__item">Цели обработки персональных данных
+        Цель обработки персональных данных Пользователя — заключение, исполнение и прекращение гражданско-правовых
+        договоров;
+        предоставление доступа Пользователю к сервисам, информации и/или материалам, содержащимся на веб-сайте <a
+          href="#" class="highlighted">https://mysite.ru;</a> уточнение деталей заказа.
+        Также Оператор имеет право направлять Пользователю уведомления о новых продуктах и услугах, специальных
+        предложениях и
+        различных событиях. Пользователь всегда может отказаться от получения информационных сообщений, направив
+        Оператору
+        письмо на адрес электронной почты <a href="#" class="highlighted">policy@mysite.ru</a> с пометкой «Отказ от
+        уведомлениях о новых продуктах и услугах и
+        специальных предложениях».
+        Обезличенные данные Пользователей, собираемые с помощью сервисов интернет-статистики, служат для сбора
+        информации о
+        действиях Пользователей на сайте, улучшения качества сайта и его содержания.</li>
+
+      <li class="politic__item">Правовые основания обработки персональных данных
+        Оператор обрабатывает персональные данные Пользователя только в случае их заполнения и/или отправки
+        Пользователем
+        самостоятельно через специальные формы, расположенные на сайте <a href="#"
+          class="highlighted">https://mysite.ru</a>. Заполняя соответствующие формы и/или
+        отправляя свои персональные данные Оператору, Пользователь выражает свое согласие с данной Политикой.
+        Оператор обрабатывает обезличенные данные о Пользователе в случае, если это разрешено в настройках браузера
+        Пользователя
+        (включено сохранение файлов «cookie» и использование технологии JavaScript).</li>
+
+      <li class="politic__item">Порядок сбора, хранения, передачи и других видов обработки персональных данных
+        Безопасность персональных данных, которые обрабатываются Оператором, обеспечивается путем реализации правовых,
+        организационных и технических мер, необходимых для выполнения в полном объеме требований действующего
+        законодательства в
+        области защиты персональных данных.
+        Оператор обеспечивает сохранность персональных данных и принимает все возможные меры, исключающие доступ к
+        персональным
+        данным неуполномоченных лиц.
+        Персональные данные Пользователя никогда, ни при каких условиях не будут переданы третьим лицам, за исключением
+        случаев,
+        связанных с исполнением действующего законодательства.
+        В случае выявления неточностей в персональных данных, Пользователь может актуализировать их самостоятельно,
+        путем
+        направления Оператору уведомление на адрес электронной почты Оператора <a href="#"
+          class="highlighted">policy@mysite.ru</a> с пометкой «Актуализация
+        персональных данных».
+        Срок обработки персональных данных является неограниченным. Пользователь может в любой момент отозвать свое
+        согласие на
+        обработку персональных данных, направив Оператору уведомление посредством электронной почты на электронный адрес
+        Оператора <a href="#" class="highlighted">policy@mysite.ru</a> с пометкой «Отзыв согласия на обработку
+        персональных данных».</li>
+
+      <li class="politic__item">Трансграничная передача персональных данных
+        Оператор до начала осуществления трансграничной передачи персональных данных обязан убедиться в том, что
+        иностранным
+        государством, на территорию которого предполагается осуществлять передачу персональных данных, обеспечивается
+        надежная
+        защита прав субъектов персональных данных.
+        Трансграничная передача персональных данных на территории иностранных государств, не отвечающих вышеуказанным
+        требованиям, может осуществляться только в случае наличия согласия в письменной форме субъекта персональных
+        данных на
+        трансграничную передачу его персональных данных и/или исполнения договора, стороной которого является субъект
+        персональных данных.</li>
+
+      <li class="politic__item">Заключительные положения
+        Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных
+        данных,
+        обратившись к Оператору с помощью электронной почты policy@mysite.ru.
+        В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика
+        действует
+        бессрочно до замены ее новой версией.
+        Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу <a href="#"
+          class="highlighted">https://mysite.ru/policy/</a></li>
+    </ol>
+  </div>
 
   <footer class="footer">
     <div class="footer_text">ORIGAMI 2019</div>
   </footer>
 
 
+  <div class="calculator">
+    <button class="close-button">
+      <img src="img/x-black.svg" alt="">
+    </button>
+    <div class="uCalc_209613"></div>
+    <script> var widgetOptions209613 = { bg_color: "transparent" }; (function () { var a = document.createElement("script"), h = "head"; a.async = true; a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=209613&t=" + Math.floor(new Date() / 18e5); document.getElementsByTagName(h)[0].appendChild(a) })();</script>
+  </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./build/js/scripts.min.js"></script>
