--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+  <div class="main_wrapper">
+
   <header class="header">
     <div class="container box-flex">
 
@@ -287,7 +289,6 @@
             <button class="btn call">Оставить заявку</button>
           </div>
         </li>
-
         <li class="packages__item">
           <div class="packages__content">
             <div class="packages__plan">Medium</div>
@@ -306,7 +307,6 @@
             <button class="btn call">Оставить заявку</button>
           </div>
         </li>
-
         <li class="packages__item">
           <div class="packages__content">
             <div class="packages__plan">Large</div>
@@ -324,7 +324,6 @@
             <button class="btn call">Оставить заявку</button>
           </div>
         </li>
-
         <li class="packages__item">
           <div class="packages__content">
             <div class="packages__plan">conceptual</div>
@@ -341,7 +340,6 @@
             <button class="btn call">Оставить заявку</button>
           </div>
         </li>
-
       </ul>
     </div>
   </section>
@@ -349,10 +347,8 @@
   <section class="reviews">
     <div class="container">
       <h3 class="section__title">Отзывы</h3>
-
       <div class="wrapper">
         <div id="reviews__wrap">
-
           <div class="reviews__item">
             <div class="reviews__pic">
               <img src="img/slide/slide1.jpg" alt="">
@@ -365,7 +361,6 @@
                   class="preson__link-soc">vk.com/id24914335</span></a>
             </div>
           </div>
-
           <div class="reviews__item">
             <div class="reviews__pic">
               <img src="img/slide/slide1.jpg" alt="">
@@ -380,7 +375,6 @@
                   class="preson__link-soc">vk.com/id24914335</span></a>
             </div>
           </div>
-
           <div class="reviews__item">
             <div class="reviews__pic">
               <img src="img/slide/slide1.jpg" alt="">
@@ -395,7 +389,6 @@
                   class="preson__link-soc">vk.com/id24914335</span></a>
             </div>
           </div>
-
           <div class="reviews__item">
             <div class="reviews__pic">
               <img src="img/slide/slide1.jpg" alt="">
@@ -410,11 +403,8 @@
                   class="preson__link-soc">vk.com/id24914335</span></a>
             </div>
           </div>
-
         </div>
       </div>
-
-
     </div>
   </section>
 
@@ -423,7 +413,6 @@
       <div class="contacts__bg" style="background-image: url(./img/bg2.png)"></div>
     </div>
     <div class="contacts__right">
-
       <div class="contacts__title">Контакты</div>
       <ul class="contacts__list">
         <li class="contacts__item">
@@ -436,7 +425,6 @@
           <a href="#" class="contacts__mail">Katrin_898@mail.ru</a>
         </li>
       </ul>
-
       <div class="contacts__soctitle">Социальные сети</div>
       <ul class="soc__list">
         <li class="soc__item">
@@ -487,7 +475,6 @@
         Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей
         информации, которую Оператор может получить о посетителях веб-сайта <a href="https://mysite.ru"
           class="highlighted">https://mysite.ru</a></li>
-
       <li class="politic__item">Основные понятия, используемые в Политике
         Автоматизированная обработка персональных данных – обработка персональных данных с помощью средств
         вычислительной
@@ -632,6 +619,8 @@
     </button>
     <div class="uCalc_209613"></div>
     <script> var widgetOptions209613 = { bg_color: "transparent" }; (function () { var a = document.createElement("script"), h = "head"; a.async = true; a.src = (document.location.protocol == "https:" ? "https:" : "http:") + "//ucalc.pro/api/widget.js?id=209613&t=" + Math.floor(new Date() / 18e5); document.getElementsByTagName(h)[0].appendChild(a) })();</script>
+  </div>
+
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
