--- a/index.html
+++ b/index.html
@@ -258,10 +258,12 @@
           <div class="portfolio__name">Вячеслав и Мария</div>
         </li>
 
+        <div class="after-posts"></div>
+
       </ul>
 
       <div class="view-button">
-        <button class="btn">Показать еще</button>
+        <button class="btn load-more">Показать еще</button>
       </div>
 
     </div>
@@ -351,7 +353,7 @@
         <div id="reviews__wrap">
           <div class="reviews__item">
             <div class="reviews__pic">
-              <img src="img/slide/slide1.jpg" alt="">
+              <img src="img/portfolio/8/8-min.jpg" alt="">
             </div>
             <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
               настоящей сказкой! Не смотря на казус со светом, все равно наша свадьба стала незабываемой благодаря вам!
@@ -363,7 +365,7 @@
           </div>
           <div class="reviews__item">
             <div class="reviews__pic">
-              <img src="img/slide/slide1.jpg" alt="">
+              <img src="img/portfolio/8/8-min.jpg" alt="">
             </div>
             <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
               настоящей сказкой!
@@ -377,7 +379,7 @@
           </div>
           <div class="reviews__item">
             <div class="reviews__pic">
-              <img src="img/slide/slide1.jpg" alt="">
+              <img src="img/portfolio/8/8-min.jpg" alt="">
             </div>
             <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
               настоящей сказкой!
@@ -391,7 +393,7 @@
           </div>
           <div class="reviews__item">
             <div class="reviews__pic">
-              <img src="img/slide/slide1.jpg" alt="">
+              <img src="img/portfolio/8/8-min.jpg" alt="">
             </div>
             <div class="reviews__text">Ребят, спасибо вам огромное за то, что сделали такой важный для нас день
               настоящей сказкой!
