--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
       <div class="soc__list-mob">
 
-        <a href="#" class="soc__link-mob">
+        <a target="_blank" href="https://www.instagram.com/origami_sd/" class="soc__link-mob">
           <img src="img/inst.svg" alt="">
         </a>
-        <a href="#" class="soc__link-mob">
+        <a target="_blank" href="https://vk.com/origami_sd" class="soc__link-mob">
           <img src="img/vk.svg" alt="">
         </a>
 
@@ -59,7 +59,7 @@
         <img src="img/x.svg" alt="">
       </a>
 
-      <a href="#" class="phone">
+      <a href="tel:79069251657" class="phone">
         +7 906 925 16 57
       </a>
 
@@ -73,7 +73,7 @@
         <h1 class="main-title">Оформление свадеб</h1>
         <div class="descr-title">г.Новокузнецк, г.Междуреченск</div>
         <div class="cost-text">
-          Заполните анкету и узнайте стоимость<br> оформления Вашей свадьбы
+          Заполните анкету и узнайте <br class="hidden-desctop"> стоимость <br class="show-desctop"> оформления Вашей свадьбы
         </div>
         <button class="btn calc-call">Узнать стоимость</button>
       </div>
@@ -258,7 +258,7 @@
           <div class="portfolio__name">Вячеслав и Мария</div>
         </li>
 
-        <div class="after-posts"></div>
+        <li class="after-posts"></li>
 
       </ul>
 
@@ -421,21 +421,21 @@
           <div class="contacts__place">г.Новокузнецк, г.Междуреченск</div>
         </li>
         <li class="contacts__item">
-          <a href="#" class="contacts__phone">+7 906 925 16 57</a>
+          <a href="tel:79069251657" class="contacts__phone">+7 906 925 16 57</a>
         </li>
         <li class="contacts__item">
-          <a href="#" class="contacts__mail">Katrin_898@mail.ru</a>
+          <a href="mailto:Katrin_898@mail.ru" class="contacts__mail">Katrin_898@mail.ru</a>
         </li>
       </ul>
       <div class="contacts__soctitle">Социальные сети</div>
       <ul class="soc__list">
         <li class="soc__item">
-          <a href="#" class="soc__link">
+          <a href="https://www.instagram.com/origami_sd/" target="_blank" class="soc__link">
             <img src="img/inst.svg" alt="">
           </a>
         </li>
         <li class="soc__item">
-          <a href="#" class="soc__link">
+          <a href="https://vk.com/origami_sd" target="_blank" class="soc__link">
             <img src="img/vk.svg" alt="">
           </a>
         </li>
