--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="" class="nav__link">О студии</a>
+            <a href="#about" class="nav__link">О студии</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Портфолио</a>
+            <a href="#portf" class="nav__link">Портфолио</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Цены</a>
+            <a href="#price" class="nav__link">Цены</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Отзывы</a>
+            <a href="#reviews" class="nav__link">Отзывы</a>
           </li>
           <li class="nav__item">
-            <a href="" class="nav__link">Контакты</a>
+            <a href="#cont" class="nav__link">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -113,7 +113,7 @@
     </div>
   </section>
 
-  <section class="about">
+  <section class="about" id="about">
     <div class="container">
       <h3 class="section__title">О студии</h3>
       <p class="about__descr">
@@ -163,7 +163,7 @@
     </div>
   </section>
 
-  <section class="portfolio">
+  <section class="portfolio" id="portf">
     <div class="container">
 
       <h3 class="section__title">Портфолио</h3>
@@ -269,7 +269,7 @@
     </div>
   </section>
 
-  <section class="packages">
+  <section class="packages" id="price">
     <div class="container">
       <h3 class="section__title">Свадебные пакеты</h3>
 
@@ -346,7 +346,7 @@
     </div>
   </section>
 
-  <section class="reviews">
+  <section class="reviews" id="reviews">
     <div class="container">
       <h3 class="section__title">Отзывы</h3>
       <div class="wrapper">
@@ -410,7 +410,7 @@
     </div>
   </section>
 
-  <section class="contacts">
+  <section class="contacts" id="cont">
     <div class="contacts__left">
       <div class="contacts__bg" style="background-image: url(./img/bg2.png)"></div>
     </div>
@@ -624,8 +624,9 @@
   </div>
 
   </div>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  
+  <script src="build/"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="./build/js/scripts.min.js"></script>
 </body>
 
